--- a/views/book-list.hbs
+++ b/views/book-list.hbs
@@ -1,10 +1,13 @@
 <h2>Our Books</h2>
 
+<a href="/book-add">Add a Book</a>
+
 <ul>
   {{#each bookArray}}
   <li>
     <h3>{{this.title}}</h3>
     <p>by {{this.author}}</p>
+    <a href="/book/{{this._id}}">See Book Details</a>
   </li>
   {{/each}}
 </ul>
