--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -15,6 +15,7 @@
 
     <nav>
       <a href="/">Home</a>
+      <a href="/books">Our Books</a>
     </nav>
   </header>
 
@@ -28,32 +29,3 @@
 </body>
 
 </html>
-
-
-{{!--
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>{{title}}</title>
-  <link rel="stylesheet" href="/stylesheets/style.css" />
-</head>
-
-<body>
-  <header>
-    <h1>Express Library</h1>
-
-    <nav>
-      <a href="/">Home</a>
-    </nav>
-  </header>
-
-  {{{body}}}
-
-  <script src="/javascripts/script.js"></script>
-</body>
-
-</html> --}}
