--- a/views/book-details.hbs
+++ b/views/book-details.hbs
@@ -7,3 +7,37 @@
 <p>Rating: {{bookItem.rating}}</p>
 
 <p>Created: {{bookItem.createdAt}}</p>
+
+{{!-- Link to the EDIT page (ID in the adress to know which book to edit) --}}
+<a href="/book/{{bookItem._id}}/edit">Edit this Book</a>
+{{!-- Link to the DELETE page (ID in the adress to know which book to edit) --}}
+<a href="/book/{{bookItem._id}}/delete">Delete this Book</a>
+
+<section>
+  <h3>Book Reviews</h3>
+  <h4>Add a Review</h4>
+
+  <form action="/book/{{bookItem._id}}/process-review" method="POST">
+    <label>
+      Your Name (optional):
+      <input type="text" name="userFullName" placeholder="Jane Austen" />
+    </label>
+    <label>
+      Your Review (up to 200 characters):
+      <input type="text" name="reviewText" placeholder="My favorite book ever" maxlength="200" required />
+    </label>
+
+    <button>Submit Review</button>
+  </form>
+
+  <ul>
+    {{#each bookItem.reviews}}
+    <li>
+      <p>
+        <trong>{{this.userFullName}}</trong> says:
+      </p>
+      <p>{{this.reviewText}}</p>
+    </li>
+    {{/each}}
+  </ul>
+</section>
